test/typecheck/errors/assign-type-to-var2.boa
p: Project;
p = Project; # error
